other-mpol/add-default-resources/.chainsaw-test/partial-exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: preserve-defaults-image
  namespace: policy-exceptions
spec:
  policyRefs: [{kind: MutatingPolicy, name: add-default-resources}]
  images: [approved.example/keep:1]
  matchConditions:
  - name: target
    expression: object.metadata.?namespace.orValue('') == 'default' && object.metadata.name == 'partial-exception'
