other-mpol/add-default-resources/.chainsaw-test/pod-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  containers:
  - name: pod01-01
    image: nginx:latest
    resources:
      requests:
        memory: "500Mi"
        cpu: "500m"
  - name: pod01-02
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  containers:
  - name: pod02-01
    image: nginx:latest
  - name: pod02-02
    image: nginx:latest
    resources:
      requests:
        cpu: "500m"
