other-mpol/add-default-resources/.chainsaw-test/podcontroller-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - name: bb-01
          image: nginx:latest
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
        - name: bb-02
          image: nginx:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - name: bb-01
          image: nginx:latest
        - name: bb-02
          image: nginx:latest
          resources:
            requests:
              cpu: "500m"
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: cronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - name: bb-01
            image: nginx:latest
            resources:
              requests:
                memory: "500Mi"
                cpu: "500m"
          - name: bb-02
            image: nginx:latest
          restartPolicy: OnFailure
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: cronjob02
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
          - name: bb-01
            image: nginx:latest
          - name: bb-02
            image: nginx:latest
            resources:
              requests:
                cpu: "500m"
          restartPolicy: OnFailure
