other-mpol/add-default-resources/add-default-resources.yaml
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  name: add-default-resources
  annotations:
    policies.kyverno.io/minversion: 1.19.1
spec:
  autogen:
    podControllers:
      controllers:
      - deployments
      - cronjobs
      - jobs
      - statefulsets
      - daemonsets
  evaluation:
    mutateExisting:
      enabled: false
    admission:
      enabled: true
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["pods"]
  mutations:
  - patchType: ApplyConfiguration
    applyConfiguration:
      expression: >-
        Object{
          spec: Object.spec{
            containers: object.spec.containers.map(c,
              exceptions.allowedImages.exists(image, image == c.image) ? c :
              Object.spec.containers{
                name: c.name,
                resources: Object.spec.containers.resources{
                  requests: Object.spec.containers.resources.requests{
                    cpu: has(c.resources) && has(c.resources.requests) && has(c.resources.requests.cpu)
                         ? c.resources.requests.cpu
                         : "100m",
                    memory: has(c.resources) && has(c.resources.requests) && has(c.resources.requests.memory)
                          ? c.resources.requests.memory
                          : "100Mi"
                  }
                }
              }
            )
          }
        }
