other-mpol/add-default-resources/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-default-resources
spec:
  steps:
  - name: policy-exceptions-namespace
    skipDelete: true
    try:
    - apply:
        resource: {apiVersion: v1, kind: Namespace, metadata: {name: policy-exceptions}}
  - name: step-01
    try:
    - apply:
        file: ../add-default-resources.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: podcontroller-resources.yaml
    - apply:
        file: pod-resources.yaml
  - name: step-03
    try:
    - assert:
        file: podcontroller-patched.yaml
    - assert:
        file: pod-resources-patched.yaml
  - name: step-03-partial-exception
    try:
    - apply:
        file: partial-exception.yaml
    - apply:
        file: partial-exception-pod.yaml
    - assert:
        file: partial-exception-pod-patched.yaml
    - error:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            name: partial-exception
            namespace: default
          spec:
            containers:
            - name: first
              resources:
                requests: {cpu: 100m, memory: 100Mi}
